<resources>
    <string name="app_name">TimeSheet</string>

    <string name="date">Date</string>

    <!--Users details-->
    <string name="email_hint">Email Address</string>
    <string name="password_hint">Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="password_retrieve_button">Forgot Password</string>
    <string name="title_activity_password_retrieval">Password Retrieval</string>
    <string name="retrieve">Retrieve</string>
    <string name="EmpCode">Employer Code</string>

    <string name="first_name">First name</string>
    <string name="Surname">Surname</string>

    <!--Buttons-->
    <string name="enter_button">Enter</string>
    <string name="send_button">Send</string>
    <string name="Confirm">Confirm</string>

    <!--CreateEmployee-->
    <string name="create_text_view">Create</string>
    <string name="title_activity_create">Create</string>
    <string name="sign_up">Sign up</string>

    <!--Company Details-->
    <string name="company_email">Company Email Address</string>
    <string name="title_create_company">Company name</string>

    <string name="week_ending">Week ending</string>
    <string name="mon"><u>Monday</u>:</string>
    <string name="tues"><u>Tuesday</u>:</string>
    <string name="wed"><u>Wednesday</u>:</string>
    <string name="thur"><u>Thursday</u>:</string>
    <string name="fri"><u>Friday</u>:</string>
    <string name="sat"><u>Saturday</u>:</string>
    <string name="sun"><u>Sunday</u>:</string>
    <string name="hours_worked">Hours Worked</string>
    <string name="hours">Hours</string>


    <!--Tester for Time picker-->
    <string name="action_settings">Settings</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected">time selected</string>
    <string name="time_current">The Time is:</string>

    <!--End of Time picker test-->

    <!--Confirmation/Edit option Start-->

    <string name="lunch">Lunch Break</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>

    <!--Confirmation/Edit option End-->

    <!--Sending information Start-->

    <string name="chooser_text">Choose Sharing Method</string>

    <!--Sending information End-->

    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_closer">Close Navigation drawer</string>


    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>


    <string name="token_null">Token: null</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>

    <!--<string name="id_fmt">User ID: %s</string>-->
    <!--<string name="email_fmt">Email: %s</string>-->
    <!--<string name="title_activity_map">Map</string>-->
    <!--<string name="title_activity_nav_drawer">nav_drawer</string>-->
    <!--<string name="navigation_drawer_close">Close navigation drawer</string>-->
    <!--<string name="nav_header_title">Android Studio</string>-->
    <!--<string name="nav_header_subtitle">android.studio@android.com</string>-->
    <!--<string name="nav_header_desc">Navigation header</string>-->

    <string name="message_pass">TimeSheet</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="enter_your_employers_code">Enter your Employers Code</string>
    <string name="change">Change</string>
    <string name="back">Back</string>
    <string name="employer_code">Employer Code</string>
    <string name="send">Send</string>
    <string name="employee_code">Employee code</string>
    <string name="code">Code</string>
    <string name="total_hours">Total Hours</string>
    <string name="holiday">Holiday</string>
    <string name="sick">Sick</string>
    <string name="profile">Profile</string>
    <string name="start">Start</string>
    <string name="finish">Finish</string>
    <string name="company">Company</string>
    <string name="individual">Individual</string>
    <string name="or">Or</string>
    <string name="sign_in_time">Sign in time</string>
    <string name="sign_off_time">Sign off time</string>
    <string name="cancel">Cancel</string>
    <string name="day_of_the_week">Day of the Week:</string>
    <string name="total_time">Total Time:</string>
    <string name="finish_time">Finish Time:</string>
    <string name="start_time">Start Time:</string>
    <string name="week_ending_dd_mm_yy">week ending (dd-mm-yy)</string>
    <string name="name">Name</string>
    <string name="log_out">Log Out</string>
    <string name="company_employer">Company/Employer</string>
</resources>

