<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    tools:context="com.Spath_Family.TimeSheet1.CreateEmployee">

    <EditText
        android:id="@+id/etEmpCreateName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="69dp"
        android:hint="@string/name"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/info_ic_emp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCreateTitle"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etEmpCodeCreate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="113dp"
        android:hint="@string/EmpCode"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="@+id/uyeEmail"
        app:layout_constraintEnd_toStartOf="@+id/info_ic_emp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/etEmpCreateName"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/uyePasswordConfirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="69dp"
        android:ems="10"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/uyeSignUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uyePassword"
        tools:ignore="Autofill" />

    <TextView
        android:id="@+id/tvCreateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:text="@string/create_account"
        android:textColor="#9C27B0"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/etEmpCreateName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/uyeEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/uyePassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/info_ic_emp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/uyePassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/uyePasswordConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uyeEmail"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/uyeSignUp"
        android:layout_width="100dp"
        android:layout_height="0dp"
        android:layout_marginBottom="60dp"
        android:background="#9C27B0"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uyePasswordConfirm" />

    <ImageView
        android:id="@+id/info_ic_emp"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="76dp"
        app:layout_constraintBottom_toTopOf="@+id/uyeEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etEmpCodeCreate"
        app:layout_constraintTop_toBottomOf="@+id/etEmpCreateName"
        app:srcCompat="@drawable/ic_info" />

</androidx.constraintlayout.widget.ConstraintLayout>